css/main.css
/* ... */
nav>ul>li>a:hover {
    color: #C3979F;
}
nav .links li {
    list-style: none;
}
#nav-toggle {
    position: absolute;
    top: -100px;
}
nav .icon-burger .line {
    width: 30px;
    height: 4px;
    background-color: #fff;
    margin: 5px;
    border-radius: 3px;
}

/* BARRE DE RECHERCHE */
#recherche{
    position: relative;
    background-color: #FFFFFF;
    margin: 0 15px 0 auto;
}
#searchArrow{
    height: 22px;
    position: absolute;
    top: 2.2px;
    right: 3px;
    cursor: pointer;
}
#searchArrow:hover, #searchArrow:active{
    opacity: 0.6;
}
#searchInput{
    margin: 0;
    border: none;
    width: 200px;
    height: 25px;
}


/* CELLIER */

.cellier{
    width: 100%;
}
.bouteille{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    margin: 10px auto;
    width: 100%;
    padding: 20px 10px;
    background-color: #C6D8D3;
    border-radius: 5px;
}
.bouteilles{
    margin-top: 20px;
}
.tuile{
    display: flex;
    align-items: center;
    box-sizing: border-box;
    height: 85px;
}
.img{
    min-width: 65px;
    width: 30%;
    max-width: fit-content;
    width: -moz-max-content;
    background-color: #FFFFFF;
    height: 100%;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.1em;
    margin: 0 20px 0 8px;
    position: relative;
}
.img img {
    max-width: 100%;
    max-height: 100%;
}
.description{
    width: 70%;
    height: 100%;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;
}
::-webkit-scrollbar{
    width: 8px;
}
::-webkit-scrollbar-track{
    border:7px solid #626264;
    box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.3);
}
::-webkit-scrollbar-thumb{
    background: linear-gradient(
        45deg,
        #bed17b,
        #C3979F
    );
    border-radius: 3px;
}
    
.description .nom{
    font-family: "Lora-BoldItalic";
}
.description p{
    margin: 3px;
    font-family: "HindMadurai-Medium";
    color:  #011C27;
}
.description p.pays, .description p.quantite{
    color : #511730;
}
.description p.quantite{
    font-family: "HindMadurai-Bold";
}
.description p.millesime{
    font-family: "Lora-Italic";
}
.description p.prix{
    color: #4F646F;
    font-family: "HindMadurai-Bold";
}
.description div:last-of-type{
    border-top: 1px solid #4F646F;
    margin-top: 8px;
}
.btnAjouter, .btnBoire{
    position: absolute;
    width: 20px;
    height: 20px;
    cursor: pointer;
}
.btnAjouter{
    top: 0;
    left: calc(100% - 10px);
}
.btnBoire{
    bottom: 0;
    left: calc(100% - 10px);
}
.bulle{
    position: absolute;
    background-color: #511730;
    color: #FFFFFF;
    border-radius: 50%;
    top: calc(50% - 12.5px);
    left: calc(100% - 12.5px);
    width: 25px;
    height: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.bulle p {
    margin: 0;
    font-family: "HindMadurai-Medium";
}
.tiny-text{
    font-size: 0.9em;
}
.optionsIcones{
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
    cursor: pointer;
}
.optionsIcones img{
    width: 18px;
    margin: 8px 0;
}

/* FOOTER */

footer {
    position: fixed;
    font-family: "HindMadurai-Medium";
    left: 0px;
    bottom: 0px;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    text-align: center;
    background-color: #011C27;
    color: #FFFFFF;
    z-index: 9999;
    display: none;
}
footer p
{
    padding-right:50px;
    font-size: 0.8em;
}


/* FORMULAIRES */

.compte, .ajouter, .modificationBtl, .formImport{
    margin: auto;
    margin-top: 20px;
    padding: 18px;
    border-radius: 5px;
    width: 98%;
    background-color: #C6D8D3;
	display: flex;
    flex-direction: column;
    box-sizing: border-box;
	font-family: "HindMadurai-Medium";
    font-size: 1em;
    box-sizing: border-box;
}
form button{
    background-color: #011C27;
}
form, .form-ajouter{
	display: flex;
    flex-direction: column;
    width: 100%;
}
input{
	margin-bottom: 8px;
    height: 15px;
}
form button:hover, .form-ajouter button:hover, form button:active, .form-ajouter button:active{
    background-color: #C3979F;
}
form h3{
    color: #511730;
}
.forms-btns{
    display: flex;
	flex-direction: row;
	justify-content: flex-end;
}
.btnAnnuler{
    margin-right: 15px;
	background-color: #4F646F;
}
.listeAutoComplete{
    margin: 0;
}
.nouvelleBouteille{
    display: flex;
    flex-direction: column;
}

/* BOUTON CALL2ACTION AJOUTER BOUTEILLE*/

.btn-call-action{
	text-transform: uppercase;
	background-image: linear-gradient(to left,#F54EA2,#FF7676,#F54EA2);
    transition: 0.6s;
    width: 80%;
    align-self: center;
    margin: 0;
}
.btn-call-action:hover, .btn-call-action:active{
    background-position: 80px;
}

/* MODALE SUPPRIMER */
.modal-container {
    display: none;
}
.modal-container-display {
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    z-index: 15;
}

.modal-content {
    background-color: #FFFFFF;
    width: 60%;
    max-width: 500px;
    padding: 20px;
    text-align: center;
    box-shadow: 7px 7px 5px 0px rgba(88, 88, 88, 0.75);
    border: 1px solid #4F646F;
    position: relative;
    z-index: 5;
}
.modal-content h3, .modal-container-usager-display h3{
    color: #511730;
}

/* ******************************** */
/* INTERFACE ADMIN */
/* ******************************** */

#rapportImportation{
    font-size: 0.5em;
    width: 80%;
    margin: auto;
    color: #011C27;
}
#rapportImportation h2{
    color: #511730;
}
.bouteillesImport{
    height: 50vh;
    overflow-y: scroll;
    padding: 20px;
    border-radius: 5px;
    background-color: #C6D8D3;
    border: 1px solid #4F646F;
}
.bouteillesImport div{
    padding: 2px 8px;
    margin: 13px 0;
    background-color:#FFFFFF;
}
/* ... */

